kubernetes/deployment.yml
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "monolith"
    labels: 
      app: "monolith"
  spec: 
    selector: 
      matchLabels: 
        app: "monolith"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "monolith"
      spec: 
        containers: 
          - 
            name: "monolith"
            image: "jinyoung/monolith:v1"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "monolith"
    labels: 
      app: "monolith"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "monolith"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "inventory"
    labels: 
      app: "inventory"
  spec: 
    selector: 
      matchLabels: 
        app: "inventory"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "inventory"
      spec: 
        containers: 
          - 
            name: "inventory"
            image: "inventory"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "inventory"
    labels: 
      app: "inventory"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "inventory"
---
  apiVersion: "networking.k8s.io/v1"
  kind: "Ingress"
  metadata: 
    name: "gateway"
    annotations: 
      kubernetes.io/ingress.class: "nginx"
  spec: 
    rules: 
      - 
        host: ""
        http: 
          paths: 
            - 
              path: "/monoliths"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "monolith"
                  port: 
                    number: 8080
            - 
              path: "/inventories"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "inventory"
                  port: 
                    number: 8080
